# final-project-myc

./: README.md  main.py  pyproject.toml
src/: akinator.py  buttons.py  controller.py  sample_controller.py
